--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "moment": "^2.29.4",
     "node-cron": "^3.0.3",
     "node-telegram-bot-api": "^0.64.0",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "xlsx": "^0.18.5"
   }
 }
